Fix layout overflow bug

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ padding-left: 50px;
 .search {
   border-radius: 20px;
   border-style: none;
-  width: 55em;
+  width: 30vw;
 }
 
 .item-3 {
@@ -48,30 +48,45 @@ padding-left: 50px;
 }
 
 .item-4 {
+  content: 'Your Projects';
   grid-area: main;
   display: flex;
   flex-wrap: wrap;
   flex: 1 1 auto;
   width: 100%;
   gap: 20px;
-  justify-content: space-evenly;
-  align-content: space-evenly;
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 1fr 3fr 1fr;
 }
 .sub-item {
-  width: 40%;
-  height: 20%;
+  flex: 0 1 30%;
+  display: grid;
+  width: min(40%,300px);
+  height: min(23%, 180px);
   background-color: whitesmoke;
   justify-content: center;
   align-content: center;
+  align-items: center;
   border-left: 10px solid rgb(250, 197, 99);
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 5px 8px 10px rgb(165, 164, 164, 0.3);
-  padding: 15px;
+  padding: 1% 2.5% 1% 2.5%;
   font-family: Tahoma, Geneva, Verdana, sans-serif;
   
 }
-p, h3 {
-font-size: min(15px, 50%);
+.sub-item > p, .sub-item > h3 {
+margin: 0%;
+flex: 0 1 0;
+}
+
+h3 {
+  font-size: max(1.2vw, 1.2vh);
+  padding-bottom: 5%;
+}
+p {
+  font-size: max(1vw, 1vh);
 }
 
 .item-5 {
@@ -100,4 +115,17 @@ input {
 
 input:focus {
   outline: none;
+}
+
+.icons {
+  padding-top: 3vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-self: flex-end;
+  justify-self: flex-end;
+}
+.icons > img {
+  width: max(1.3vw, 1.3vh);
+  height: auto;
+  margin-right: 1px;
 }
